--- a/templates/drive/hola.html
+++ b/templates/drive/hola.html
@@ -1,9 +1,62 @@
-holaaaaa
-<ul>
-{% for article in object_list %}
-    <li>{{article}}</li>
-{% endfor %}
-</ul>
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <title></title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.datatables.net/1.11.5/css/jquery.dataTables.min.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
 
-fin
-aa
+  </head>
+  <style>
+      html, body {
+          height: 100%;
+          margin: 0px;
+      }
+      </style>
+
+  <body>
+    <div class="container mt-4 rounded">
+    <table id="example" class="table table-striped table-bordered rounded table-light" style="width:100%">
+      <thead>
+      <th>Name</th>
+      <th>Archio</th>
+      <th>fecha</th>
+      <th>extra</th>
+      <th>generar</th>
+      </thead
+
+
+      <tbody>
+      {% for article in object_list %}
+      <tr>
+      <td>{{article.name}}</td>
+      <td>{{article.uploadedFile}}</td>
+      <td>{{article.date}}</td>
+      <td>{{article.extra}}</td>
+      <td>
+            <form  method='POST'>
+            {% csrf_token %}
+                  <input type='hidden' name='key' value="{{article.uploadedFile}}">
+                  <button type="submit" class="btn btn-default btn-xs btn-flat ml-1">
+                  <i class="fas fa-file-alt"></i>
+                  </button>
+            </form>
+    </td>
+      </tr>
+      {% endfor %}
+      </tbody>
+    </table>
+    </div>
+  </body>
+        <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
+        <script src="https://cdn.datatables.net/1.11.5/js/jquery.dataTables.min.js"></script>
+        <script>
+
+        $(document).ready(function() {
+          $('#example').DataTable({
+              "lengthChange": false
+          });
+      } );
+      </script>
+</html>
