--- a/templates/drive/holi.html
+++ b/templates/drive/holi.html
@@ -1,5 +1,31 @@
-<form method="post" enctype="multipart/form-data">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <input type="submit" value="Send message">
-</form>
+
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <title>drivetest</title>
+    <!-- CSS only -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <style>
+        html, body {
+            height: 100%;
+            margin: 0px;
+        }
+        </style>
+  </head>
+  <body>
+  <div class="container border h-100">
+    <div class="d-flex h-100 border align-items-center justify-content-center">
+      <form method="post" enctype="multipart/form-data">
+        <div class="form-group border p-5 rounded">
+        {% csrf_token %}
+        {{ form.as_p }}
+    <div class="text-center">
+  <button type="submit" class="btn btn-primary">subir</button>
+</div>
+</div>
+  </form>
+</div>
+</div>
+  </body>
+</html>
