--- a/templates/drive/hola.html
+++ b/templates/drive/hola.html
@@ -17,27 +17,28 @@
 
   <body>
     <div class="container mt-4 rounded">
-    <table id="example" class="table table-striped table-bordered rounded table-light" style="width:100%">
+    <table id="example" class="table table-striped table-bordered rounded" style="width:100%">
       <thead>
+        <tr class="table-info ">
       <th>Name</th>
       <th>Archio</th>
       <th>fecha</th>
       <th>extra</th>
       <th>generar</th>
-      </thead
-
+      </tr>
+      </thead>
 
       <tbody>
       {% for article in object_list %}
       <tr>
       <td>{{article.name}}</td>
-      <td>{{article.uploadedFile}}</td>
+        <td class="d-flex justify-content-center"> <a href="{{ article.uploadedFile.url }}" download  class="btn btn-outline-info float-right ">Download</a></td>
       <td>{{article.date}}</td>
-      <td>{{article.extra}}</td>
+      <td class="d-flex justify-content-center"> <a href="{{ article.extra.url }}" download  class="btn btn-outline-info float-right ">Download</a></td>
       <td>
             <form  method='POST'>
             {% csrf_token %}
-                  <input type='hidden' name='key' value="{{article.uploadedFile}}">
+                  <input type='hidden' name='key' value="{{article.uploadedFile.url}}">
                   <button type="submit" class="btn btn-default btn-xs btn-flat ml-1">
                   <i class="fas fa-file-alt"></i>
                   </button>
