--- a/templates/drive/hola.html
+++ b/templates/drive/hola.html
@@ -16,6 +16,18 @@
       </style>
 
   <body>
+
+      <nav class="navbar navbar-expand-md navbar-dark" style="background-color: #6fc9f8  ">
+          <div class="mx-5 justified-content-right">
+              <a class="navbar-brand" href={% url "drive:agregar"%}>
+              <button type="button" class="btn btn-light">Agregar</button>
+             </a>
+              </button>
+          </div>
+      </nav>
+
+
+
     <div class="container mt-4 rounded">
     <table id="example" class="table table-striped table-bordered rounded" style="width:100%">
       <thead>
