--- a/templates/drive/holi.html
+++ b/templates/drive/holi.html
@@ -14,6 +14,17 @@
         </style>
   </head>
   <body>
+
+    <nav class="navbar navbar-expand-md navbar-dark" style="background-color: #6fc9f8  ">
+        <div class="mx-5 justified-content-right">
+            <a class="navbar-brand" href={% url "drive:lista"%}>
+            <button type="button" class="btn btn-light">Volver</button>
+           </a>
+            </button>
+        </div>
+    </nav>
+
+
   <div class="container border h-100">
     <div class="d-flex h-100 border align-items-center justify-content-center">
       <form method="post" enctype="multipart/form-data">
