--- a/templates/drive/hola.html
+++ b/templates/drive/hola.html
@@ -68,7 +68,8 @@
 
         $(document).ready(function() {
           $('#example').DataTable({
-              "lengthChange": false
+              "lengthChange": false,
+              pageLength: 15,
           });
       } );
       </script>
