--- a/templates/drive/table.html
+++ b/templates/drive/table.html
@@ -51,6 +51,7 @@
             <form  method='POST'>
             {% csrf_token %}
                   <input type='hidden' name='key' value="{{article.uploadedFile.url}}">
+                  <input type='hidden' name='name' value="{{article.name}}">
                   <button type="submit" class="btn btn-default btn-xs btn-flat ml-1">
                   <i class="fas fa-file-alt"></i>
                   </button>
