--- a/templates/drive/table.html
+++ b/templates/drive/table.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
@@ -29,6 +30,8 @@
 
 
     <div class="container mt-4 rounded">
+      {{static  }}
+
     <table id="example" class="table table-striped table-bordered rounded" style="width:100%">
       <thead>
         <tr class="table-info ">
