--- a/templates/drive/agregar.html
+++ b/templates/drive/agregar.html
@@ -1,19 +1,7 @@
-{% load staticfiles %}
-<!DOCTYPE html>
-<html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>drivetest</title>
-    <!-- CSS only -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <style>
-        html, body {
-            height: 100%;
-            margin: 0px;
-        }
-        </style>
-  </head>
-  <body>
+{% extends "base.html" %}
+
+{% block container%}
+
 
     <nav class="navbar navbar-expand-md navbar-dark" style="background-color: #6fc9f8  ">
         <div class="mx-5 justified-content-right">
@@ -29,7 +17,7 @@
     <div class="d-flex h-100 border align-items-center justify-content-center">
       <form method="post" enctype="multipart/form-data">
         <div class="form-group border p-5 rounded">
-        {% csrf_token %}
+          {% csrf_token %}
         {{ form.as_p }}
     <div class="text-center">
   <button type="submit" class="btn btn-primary">subir</button>
@@ -38,5 +26,4 @@
   </form>
 </div>
 </div>
-  </body>
-</html>
+{%endblock%}
