--- a/templates/drive/table.html
+++ b/templates/drive/table.html
@@ -1,32 +1,9 @@
-{% load static %}
-<!DOCTYPE html>
-<html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title></title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdn.datatables.net/1.11.5/css/jquery.dataTables.min.css">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
+{% extends "base.html" %}
 
-  </head>
-  <style>
-      html, body {
-          height: 100%;
-          margin: 0px;
-      }
-      </style>
+{% block container%}
 
-  <body>
 
-      <nav class="navbar navbar-expand-md navbar-dark" style="background-color: #6fc9f8  ">
-          <div class="mx-5 justified-content-right">
-              <a class="navbar-brand" href={% url "drive:agregar"%}>
-              <button type="button" class="btn btn-light">Agregar</button>
-             </a>
-              </button>
-          </div>
-      </nav>
-
+{% include "nav.html" %}
 
 
     <div class="container mt-4 rounded">
@@ -65,7 +42,10 @@
       </tbody>
     </table>
     </div>
-  </body>
+
+    {%endblock%}
+
+{% block table%}
         <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
         <script src="https://cdn.datatables.net/1.11.5/js/jquery.dataTables.min.js"></script>
         <script>
@@ -78,4 +58,4 @@
           });
       } );
       </script>
-</html>
+      {%endblock%}
