--- a/templates/drive/agregar.html
+++ b/templates/drive/agregar.html
@@ -3,20 +3,21 @@
 {% block container%}
 
 
-    <nav class="navbar navbar-expand-md navbar-dark" style="background-color: #6fc9f8  ">
-        <div class="mx-5 justified-content-right">
+    <nav class="navbar navbar-expand-md navbar-dark" style="background-color: #6fc9f8">
+        <ul class="navbar-nav ms-auto  px-4">
+            <li class="nav-item px-4">
             <a class="navbar-brand" href={% url "drive:lista"%}>
             <button type="button" class="btn btn-light">Volver</button>
            </a>
-            </button>
-        </div>
+           </li>
+        </ul>
     </nav>
 
 
-  <div class="container border h-100">
-    <div class="d-flex h-100 border align-items-center justify-content-center">
+  <div class="container  h-100">
+    <div class="d-flex h-100  align-items-center justify-content-center">
       <form method="post" enctype="multipart/form-data">
-        <div class="form-group border p-5 rounded">
+        <div class="form-group  p-5 rounded">
           {% csrf_token %}
         {{ form.as_p }}
     <div class="text-center">
