--- a/templates/drive/login.html
+++ b/templates/drive/login.html
@@ -3,9 +3,9 @@
 {% load static %}
 
   {% block container%}
-    <div class="container border h-100">
-      <div class="d-flex h-100 border align-items-center justify-content-center ">
-          <div class="border pt-5 p-5">
+    <div class="container  h-100">
+      <div class="d-flex h-100  align-items-center justify-content-center ">
+          <div class=" pt-5 p-5">
 
 
             <img class="mx-auto d-block mb-5" src={% static "img/logo.png" %} width="180" height="136">
@@ -20,7 +20,7 @@
                         <label for="id_password">Password:</label>
                         <input class="form-control input_widt" type="password" name="password" autocomplete="current-password" required="" id="id_password">
                       </div>
-                  <button class="input_widt mt-4 w-100 btn btn-primary btn-lg btn-block" type="submit" name="sumbit">Log in
+                  <button class="input_widt mt-4 w-100 btn btn-primary custom-btn btn-lg btn-block" type="submit" name="sumbit">Log in
                   </button>
               </form>
             </div>
