--- a/templates/drive/table.html
+++ b/templates/drive/table.html
@@ -7,15 +7,15 @@
 
 
     <div class="container mt-4 rounded">
-      {{static  }}
 
     <table id="example" class="table table-striped table-bordered rounded" style="width:100%">
       <thead>
         <tr class="table-info ">
-      <th>Name</th>
-      <th>Archio</th>
+      <th>Equipo</th>
+      <th>csv</th>
       <th>fecha</th>
-      <th>extra</th>
+      <th>kml</th>
+      <th>factura</th>
       <th>generar</th>
       </tr>
       </thead>
@@ -24,13 +24,14 @@
       {% for article in object_list %}
       <tr>
       <td>{{article.name}}</td>
-        <td class="d-flex justify-content-center"> <a href="{{ article.uploadedFile.url }}" download  class="btn btn-outline-info float-right ">Download</a></td>
+      <td class="text-center"> <a href="{{ article.csv.url }}" download  class="btn btn-outline-info float-right ">Download</a></td>
       <td>{{article.date}}</td>
-      <td class="d-flex justify-content-center"> <a href="{{ article.extra.url }}" download  class="btn btn-outline-info float-right ">Download</a></td>
-      <td>
+      <td class="text-center"> <a href="{{ article.kml.url }}" download  class="btn btn-outline-info float-right ">Download</a></td>
+      <td class="text-center"> <a href="{{ article.bill.url }}" download  class="btn btn-outline-info float-right ">Download</td>
+      <td class="text-center">
             <form  method='POST'>
             {% csrf_token %}
-                  <input type='hidden' name='key' value="{{article.uploadedFile.url}}">
+                  <input type='hidden' name='key' value="{{article.csv.url}}">
                   <input type='hidden' name='name' value="{{article.name}}">
                   <button type="submit" class="btn btn-default btn-xs btn-flat ml-1">
                   <i class="fas fa-file-alt"></i>
