--- a/templates/nav.html
+++ b/templates/nav.html
@@ -1,7 +1,16 @@
+
+
 <nav class="navbar navbar-expand-md navbar-dark" style="background-color: #6fc9f8  ">
-    <div class="mx-5 justified-content-right">
+  <ul class="navbar-nav ms-auto  px-4">
+      <li class="nav-item px-2">
         <a class="navbar-brand" href={% url "drive:agregar"%}>
         <button type="button" class="btn btn-light">Agregar</button>
-       </a>
-    </div>
+        </a>
+      </li>
+      <li class="nav-item">
+        <a class="navbar-brand" href={% url "drive:logout"%}>
+        <button type="button" class="btn  btn-light">Salir</button>
+      </a>
+      </li>
+    </ul>
 </nav>
