--- a/templates/base.html
+++ b/templates/base.html
@@ -6,24 +6,14 @@
     <title>drivetest</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
-
+    <link  href={% static "css/style.css" %} rel="stylesheet">
 
     <link rel="stylesheet" href="https://cdn.datatables.net/1.11.5/css/jquery.dataTables.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
     <!-- JavaScript Bundle with Popper -->
   </head>
   <style>
-      html, body {
-          height: 100%;
-          margin: 0px;
-      }
-      .input_widt{
-        width: 300px;
-      }
-      .btn-primary.custom-btn {
-          	background-color: #6fc9f8;
-          	border-color: #6fc9f8;
-          }
+
       </style>
 
   <body>
