--- a/templates/drive/update.html
+++ b/templates/drive/update.html
@@ -11,7 +11,7 @@
           {% csrf_token %}
         {{ form.as_p }}
     <div class="text-center">
-  <button type="submit" class="btn btn-primary">subir</button>
+  <button type="submit" class="btn btn-primary custom-btn">subir</button>
 </div>
 </div>
   </form>
