--- a/templates/drive/login.html
+++ b/templates/drive/login.html
@@ -20,7 +20,7 @@
                         <label for="id_password">Password:</label>
                         <input class="form-control input_widt" type="password" name="password" autocomplete="current-password" required="" id="id_password">
                       </div>
-                  <button class="input_widt mt-4 w-100 btn btn-primary custom-btn btn-lg btn-block" type="submit" name="sumbit">Log in
+                  <button class="input_widt mt-4 w-100 btn btn-primary btn-lg btn-block" type="submit" name="sumbit">Log in
                   </button>
               </form>
             </div>
