--- a/templates/nav_agregar.html
+++ b/templates/nav_agregar.html
@@ -2,7 +2,7 @@
 
     <nav class="navbar navbar-expand-md navbar-dark bg-dark" >
       <a class="navbar-brand mx-4" href="#">
-       <img src={% static "img/letras.png" %} width="183" height="30" alt="">
+       <img src={% static "img/letras_2.png" %} width="183" height="30" alt="">
      </a>
         <ul class="navbar-nav ms-auto  px-4">
             <li class="nav-item px-4">
