--- a/templates/nav_agregar.html
+++ b/templates/nav_agregar.html
@@ -1,4 +1,4 @@
-{% load static %}
+{% load staticfiles %}
 
     <nav class="navbar navbar-expand-md navbar-dark bg-dark" >
       <a class="navbar-brand mx-4" href="#">
