--- a/templates/drive/login.html
+++ b/templates/drive/login.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% load staticfiles %}
+{% load static %}
 
   {% block container%}
     <div class="container  h-100">
