--- a/templates/drive/drivetest_confirm_delete.html
+++ b/templates/drive/drivetest_confirm_delete.html
@@ -3,19 +3,19 @@
 {% block container%}
 
 {% include "nav_agregar.html" %}
-
   <div class="container  h-100">
-    <div class="d-flex h-100  align-items-center justify-content-center">
+  <div class="d-flex h-100  align-items-center justify-content-center">
 
-<form method="post">{% csrf_token %}
+    {% if   user == usuario %}
 
-
-
-<p>¿Seguro que quiere eliminar la información del equipo {{ object.name }}?</p>
-
+    <form method="post">{% csrf_token %}
+    <p>¿Seguro que quiere eliminar la información del equipo {{ object.name }}?</p>
 
     <div class="text-center">
     <input class="btn btn-primary" type="submit" value="confirmar">
+    {%else%}
+    <p>No tiene permiso para borrar</p>
+    {%endif%}
     </div>
 </form>
 </div>
